Wire gauge selection, ring recreation

--- a/emaille/.classpath
+++ b/emaille/.classpath
@@ -2,6 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/lib/gson/gson-2.7.jar" sourcepath="C:/lib/gson/gson-2.7-sources.jar"/>
+	<classpathentry kind="lib" path="C:/lib/guava/guava-19.0.jar" sourcepath="C:/lib/guava/guava-19.0-sources.jar"/>
 	<classpathentry kind="output" path="war/WEB-INF/classes"/>
 </classpath>
