--- a/emaille/war/WEB-INF/web.xml
+++ b/emaille/war/WEB-INF/web.xml
@@ -1,8 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xmlns="http://java.sun.com/xml/ns/javaee"
-xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
-  
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	version="2.5">
+	<servlet>
+		<servlet-name>GetWires</servlet-name>
+		<servlet-class>com.jaredhays.emaille.GetWiresServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>GetWires</servlet-name>
+		<url-pattern>/data/getwires</url-pattern>
+	</servlet-mapping>
+		
+	<servlet>
+		<servlet-name>GetWeaves</servlet-name>
+		<servlet-class>com.jaredhays.emaille.GetWeavesServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>GetWeaves</servlet-name>
+		<url-pattern>/data/getweaves</url-pattern>
+	</servlet-mapping>
 </web-app>
